--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <nav id="navigation">
+    <nav id="navigation" style="background-color: #F2DDCC">
       <div class="wrapper">
         <a class="logo" href="#home">
           <img
