--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://www.facebook.com">
+              <a target="_blank" href="https://www.facebook.com/Lignes-Par-Minutes-107897418615584">
                 <svg
                   width="24"
                   height="24"
@@ -484,7 +484,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://www.facebook.com">
+              <a target="_blank" href="https://www.facebook.com/Lignes-Par-Minutes-107897418615584">
                 <svg
                   width="24"
                   height="24"
