--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <nav id="navigation" style="background-color: #F2DDCC">
+    <nav id="navigation" style="background-color: #ccffd2">
       <div class="wrapper">
         <a class="logo" href="#home">
           <img
@@ -38,7 +38,9 @@
 
           <ul class="social-links">
             <li>
-              <a target="_blank" href="https://www.instagram.com/Linesparminute/"
+              <a
+                target="_blank"
+                href="https://www.instagram.com/Linesparminute/"
                 ><svg
                   width="24"
                   height="24"
@@ -71,7 +73,10 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://www.facebook.com/Lignes-Par-Minutes-107897418615584">
+              <a
+                target="_blank"
+                href="https://www.facebook.com/Lignes-Par-Minutes-107897418615584"
+              >
                 <svg
                   width="24"
                   height="24"
@@ -187,8 +192,8 @@
 
         <div class="col-b">
           <img
-            src="./assets/mulher-negra-com-moleton-verde-com-as-duas-maos-no-peito.png"
-            alt="Mulher negra vestindo moletom verde com as duas mãos no peito e sorrindo"
+            src="./assets/personagem-com-fone-utilizando-notebook.png"
+            alt="Personagem com fone utilizando notebook"
           />
         </div>
 
@@ -451,7 +456,9 @@
         <div class="col-b">
           <ul class="social-links">
             <li>
-              <a target="_blank" href="https://www.instagram.com/Linesparminute/"
+              <a
+                target="_blank"
+                href="https://www.instagram.com/Linesparminute/"
                 ><svg
                   width="24"
                   height="24"
@@ -484,7 +491,10 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://www.facebook.com/Lignes-Par-Minutes-107897418615584">
+              <a
+                target="_blank"
+                href="https://www.facebook.com/Lignes-Par-Minutes-107897418615584"
+              >
                 <svg
                   width="24"
                   height="24"
