--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li>
               <a
                 target="_blank"
-                href="https://www.instagram.com/Linesparminute/"
+                href="https://www.instagram.com/lignesparminutes/"
                 ><svg
                   width="24"
                   height="24"
@@ -458,7 +458,7 @@
             <li>
               <a
                 target="_blank"
-                href="https://www.instagram.com/Linesparminute/"
+                href="https://www.instagram.com/lignesparminutes/"
                 ><svg
                   width="24"
                   height="24"
