--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </header>
 
         <div class="content">
-          <ul>
+          <ul style="margin-right: 10rem;">
             <li>Suporte Técnico: A empresa continua a fornecer suporte técnico confiável para resolver problemas de
               hardware e software, garantindo que seus clientes tenham um ambiente de trabalho eficiente.</li>
 
@@ -255,7 +255,7 @@
         </header>
 
         <div class="content">
-          <p>Com mais de 1.000 clientes atendidos e mais de dois anos de experiência no mercado, oferecem suporte
+          <p style="margin-right: 10rem;">Com mais de 1.000 clientes atendidos e mais de dois anos de experiência no mercado, oferecem suporte
             técnico confiável, hardwares e softwares personalizados, e contam com uma equipe de mais de 28 profissionais
             qualificados. Sua missão envolve a escolha entre atendimento remoto ou presencial, otimizando o tempo do
             cliente, enquanto a visão busca o reconhecimento regional pela excelência e criatividade. Valores incluem
@@ -273,10 +273,10 @@
   </section>
 
   <section id="contact">
-    <div class="wrapper">
+    <div class="wrapper-contact">
       <div class="col-a">
         <header>
-          <h2 style="text-align: center;">Entre em contato com a gente!</h2>
+          <h2>Entre em contato com a gente!</h2>
         </header>
 
         <form action="./forms.php" method="post">
@@ -295,14 +295,8 @@
 
           <button type="submit">Enviar</button>
         </form>
-
-        <br>
-
-        <div class="col-b">
-          <img src="./assets/homem-negro-com-moletom-bege-mexendo-no-celular.png"
-            alt="A imagem retrata um homem negro vestindo um moletom bege, que está sorrindo enquanto mexe em seu celular. Ele se encontra em um ambiente descontraído e casual, possivelmente dentro de uma sala ou espaço interno. A paleta de cores é suave, com destaque para o moletom bege. O homem está concentrado em seu dispositivo, demonstrando ação ao interagir com o celular, e sua expressão facial revela um sorriso de contentamento." />
-        </div>
       </div>
+    </div>
   </section>
 
   <footer>
@@ -312,7 +306,7 @@
           <img src="./assets/logo empresa.png" alt="logo empresa" srcset="" />
         </a>
         <p>
-          ©2022 Lignes Par Minute. <br />
+          ©2023 Lignes Par Minute. <br />
           Todos os direitos reservados.
         </p>
       </div>
