--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
         </header>
 
         <div class="content">
-          <p style="margin-right: 10rem;">Com mais de 1.000 clientes atendidos e mais de dois anos de experiência no mercado, oferecem suporte
+          <p style="margin-right: 10rem;">Com mais de 1.000 clientes atendidos e mais de dois anos de experiência no
+            mercado, oferecem suporte
             técnico confiável, hardwares e softwares personalizados, e contam com uma equipe de mais de 28 profissionais
             qualificados. Sua missão envolve a escolha entre atendimento remoto ou presencial, otimizando o tempo do
             cliente, enquanto a visão busca o reconhecimento regional pela excelência e criatividade. Valores incluem
@@ -278,6 +279,30 @@
         <header>
           <h2>Entre em contato com a gente!</h2>
         </header>
+
+        <table summary="Lista de serviços prestados pela Lines par minute">
+          <caption>Serviços oferecidos</caption>
+          <tr>
+            <th scope="col">Serviço</th>
+            <th scope="col">Descrição</th>
+          </tr>
+          <tr>
+            <th scope="row">Suporte Técnico</th>
+            <td>A empresa continua a fornecer suporte técnico confiável para resolver problemas de hardware e software,
+              garantindo que seus clientes tenham um ambiente de trabalho eficiente.</td>
+          </tr>
+          <tr>
+            <th scope="row">Hardwares Personalizados</th>
+            <td>A Lines par minute agora produz seus próprios hardwares personalizados, adaptados às necessidades
+              específicas de seus clientes. Isso inclui computadores, servidores e outros dispositivos tecnológicos de
+              alta qualidade.</td>
+          </tr>
+          <tr>
+            <th scope="row">Softwares Personalizados</th>
+            <td>Desenvolvemos softwares personalizados para atender às demandas exclusivas de seus clientes, oferecendo
+              soluções eficazes e inovadoras.</td>
+          </tr>
+        </table>
 
         <form action="./forms.php" method="post">
           <label for="nome">Nome:</label>
